// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert base demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          <div>
            这是一条普通的消息提示
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
      这是一条警示信息
    
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
    高危操作/出错信息提示
  
        </div>
      </div>
    </div>
  </div>
</div>
`;


exports[`Alert icon demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-success-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 Z M10.925,4.8 L7.036,8.689 L4.914,6.568 L3.5,7.982 L7.036,11.518 L12.339,6.214 L10.925,4.8 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-prompt-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,6 L9,6 L9,4 L7,4 L7,6 Z M7,12 L9,12 L9,7 L7,7 L7,12 Z M8,0 C3.582,0 0,3.582 0,8 C0,12.418 3.582,16 8,16 C12.418,16 16,12.418 16,8 C16,3.582 12.418,0 8,0 L8,0 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-warning-fill"
      >
        <use
          xlink:href="#t-icon-warning-fill"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-warning-fill"
      >
        <use
          xlink:href="#t-icon-warning-fill"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert close demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       知道了
    </div>
  </div>
   
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       FunctionPropClose
    </div>
  </div>
   
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      Slot Close
    
    </div>
  </div>
</div>
`;

exports[`Alert operation demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Alert title demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-success-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 Z M10.925,4.8 L7.036,8.689 L4.914,6.568 L3.5,7.982 L7.036,11.518 L12.339,6.214 L10.925,4.8 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         这是一条成功的消息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示描述，这是一条普通的消息提示描述，这是一条普通的消息提示描述，这是一条普通的消息提示描述，
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-prompt-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,6 L9,6 L9,4 L7,4 L7,6 Z M7,12 L9,12 L9,7 L7,7 L7,12 Z M8,0 C3.582,0 0,3.582 0,8 C0,12.418 3.582,16 8,16 C12.418,16 16,12.418 16,8 C16,3.582 12.418,0 8,0 L8,0 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         这是一条普通的消息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示这是一条普通的消息提示这是一条普通的消息提示这是一条普通的消息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-warning-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,12 L9,12 L9,10 L7,10 L7,12 Z M7,9 L9,9 L9,4 L7,4 L7,9 Z M8,0 C3.582,0 0,3.582 0,8 C0,12.418 3.582,16 8,16 C12.418,16 16,12.418 16,8 C16,3.582 12.418,0 8,0 L8,0 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         这是一条警示信息
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息这是一条警示信息这是一条警示信息这是一条警示信息
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-warning-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,12 L9,12 L9,10 L7,10 L7,12 Z M7,9 L9,9 L9,4 L7,4 L7,9 Z M8,0 C3.582,0 0,3.582 0,8 C0,12.418 3.582,16 8,16 C12.418,16 16,12.418 16,8 C16,3.582 12.418,0 8,0 L8,0 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         高危操作/出错信息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示高危操作/出错信息提示高危操作/出错信息提示高危操作/出错信息提示
        </div>
        <div
          class="t-alert__operation"
        >
          <span>
            相关操作
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;


exports[`Alert collapse demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-success-fill"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 Z M10.925,4.8 L7.036,8.689 L4.914,6.568 L3.5,7.982 L7.036,11.518 L12.339,6.214 L10.925,4.8 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          <div>
            <span>
              这是折叠的第一条消息
            </span>
          </div>
          <div>
             
          </div>
          <div
            class="t-alert__collapse"
          >
            展开全部
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Alert swiper demo works fine 1`] = `
<div
  class="t-alert-swiper t-alert-swiper--info"
>
  <div
    class="t-alert-swiper__content"
  >
    <div
      class="t-alert-swiper__swiper-wrap"
      style="width: 200%; left: -0%;"
    >
      <div
        class="t-alert t-alert--info"
      >
        <div
          class="t-alert__content"
        >
          <div
            class="t-alert__message"
          >
            <div
              class="t-alert__description"
            >
              测试1
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-alert t-alert--info"
      >
        <div
          class="t-alert__content"
        >
          <div
            class="t-alert__message"
          >
            <div
              class="t-alert__description"
            >
              测试2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <ul
    class="t-alert-swiper__trigger-wrap"
  >
    <li
      class="t-alert-swiper__trigger--active"
    />
    <li
      class=""
    />
  </ul>
  <div
    class="t-alert-swiper__close"
  >
     
    <svg
      class="t-icon t-icon-close"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 8L13 12 12 13 8 9 4 13 3 12 7 8 3 4 4 3 8 7 12 3 13 4z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;